# fruit-fly-brain-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: brain_region.hpp  connectome.hpp  io_utils.hpp  neuron.hpp  simulator.hpp  synapse.hpp  visualization.hpp
src/: brain_region.cpp  connectome.cpp  data_loader_main.cpp  io_utils.cpp  main.cpp  neuron.cpp  simulator.cpp  synapse.cpp  visualization.cpp
tests/: run_tests.cpp
